openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-screening-app
  namespace: java-openshift
spec:
  selector:
    app: java-screening-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
