openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-screening-app
  namespace: java-openshift
spec:
  to:
    kind: Service
    name: java-screening-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
